feat: PoC file structure

--- a/docs/introduction/converting.mdx
+++ b/docs/introduction/converting.mdx
@@ -5,6 +5,7 @@ sidebar_position: 3
 keywords: [qbox, fivem, conversion, qbcore, migration, upgrade, framework]
 description: Learn how to convert your QBCore server and resources to Qbox. This guide covers the migration process, compatibility considerations, and necessary changes to ensure a smooth transition.
 image: https://files.fivemerr.com/images/b02ac973-403b-4ead-99bf-17bc307172d9.png
+slug: /converting
 ---
 
 # Converting from QBCore
