--- a/docs/introduction/developers.mdx
+++ b/docs/introduction/developers.mdx
@@ -5,6 +5,7 @@ sidebar_position: 4
 keywords: [qbox, fivem, development, api, framework, lua, programming, scripting]
 description: Comprehensive guide for developers working with the Qbox framework. Learn best practices, API usage, and how to create high-quality resources for Qbox.
 image: https://files.fivemerr.com/images/b02ac973-403b-4ead-99bf-17bc307172d9.png
+slug: /developers
 ---
 
 # Developer's Guide
