--- a/docs/introduction/faq.mdx
+++ b/docs/introduction/faq.mdx
@@ -5,6 +5,7 @@ sidebar_position: 2
 keywords: [qbox, fivem, faq, questions, answers, help, support, troubleshooting]
 description: Find answers to commonly asked questions about the Qbox framework, including compatibility, features, installation, and troubleshooting information.
 image: https://files.fivemerr.com/images/b02ac973-403b-4ead-99bf-17bc307172d9.png
+slug: /faq
 ---
 
 # Frequently Asked Questions
