--- a/docs/resources/qbx_core/events/server.mdx
+++ b/docs/resources/qbx_core/events/server.mdx
@@ -19,7 +19,7 @@ image: https://files.fivemerr.com/images/b02ac973-403b-4ead-99bf-17bc307172d9.pn
 
 ## Non-Networked Events
 
-### QBCore:Server:OnPlayerUnload
+### OnPlayerUnload
 
 Triggered when aplayer begins the process of logging out. \
 There is no guarantee that the player still exists in qbx_core's memory at the time this event is triggered.
@@ -30,7 +30,7 @@ AddEventHandler('QBCore:Server:OnPlayerUnload', function(source) end)
 
 - source: `integer`
 
-### QBCore:Server:OnPermissionUpdate
+### OnPermissionUpdate
 
 Triggered when the player's permissions are updated. \
 Only applies to permissions created through QB permission functions.
@@ -41,7 +41,7 @@ AddEventHandler('QBCore:Server:OnPermissionUpdate', function(source) end)
 
 - source: `integer`
 
-### QBCore:Server:OnJobUpdate
+### OnJobUpdate
 
 Triggered when a player's job updates.
 
@@ -52,7 +52,7 @@ AddEventHandler('QBCore:Server:OnJobUpdate', function(source, job) end)
 - source: `integer`
 - job: [`PlayerJob`](../types/player.mdx#playerjob)
 
-### QBCore:Server:OnGangUpdate
+### OnGangUpdate
 
 Triggered when a player's gang updates.
 
@@ -63,7 +63,7 @@ AddEventHandler('QBCore:Server:OnGangUpdate', function(source, gang) end)
 - source: `integer`
 - gang: [`PlayerGang`](../types/player.mdx#playergang)
 
-### QBCore:Server:SetDuty
+### SetDuty
 
 Triggered when a player's job duty updates.
 
@@ -74,7 +74,7 @@ AddEventHandler('QBCore:Server:SetDuty', function(source, onDuty) end)
 - source: `integer`
 - onDuty: `boolean`
 
-### qbx_core:server:onGroupUpdate
+### onGroupUpdate
 
 Triggered when the player's groups are updated. If grade is nil then group was removed otherwise group was added
 
@@ -86,7 +86,7 @@ AddEventHandler('qbx_core:server:onGroupUpdate', function(source, groupName, gro
 - groupName: `string`
 - groupGrade?: `number`
 
-### QBCore:Server:OnMoneyChange
+### OnMoneyChange
 
 Triggered when a player's cash/bank balance updates.
 
@@ -100,7 +100,7 @@ AddEventHandler('QBCore:Server:OnMoneyChange', function(source, moneyType, amoun
 - operation: `'add' | 'remove' | 'set'`
 - reason: `string`
 
-### qbx_core:server:onSetMetaData
+### onSetMetaData
 
 Triggered when player.Functions.setMetaData() is used.
 
@@ -115,7 +115,7 @@ AddEventHandler('qbx_core:server:onSetMetaData', function(key, oldValue, newValu
 
 ## Networked Events
 
-### QBCore:Server:OnPlayerLoaded
+### OnPlayerLoaded
 
 Triggered when a player has finished loading.
 
