feat(qbx_core): add multichar explanation
in hopes it makes it more visible aside from the big list in FAQ

--- a/docs/resources/qbx_core/convars.mdx
+++ b/docs/resources/qbx_core/convars.mdx
@@ -1,6 +1,7 @@
 ---
 title: Convars
 sidebar_label: convars
+sidebar_position: 1
 keywords: [qbox, fivem, qbx_core, convars]
 description: Configuration variables (convars) for Qbox. Learn about the available server configuration options and their usage.
 image: https://files.fivemerr.com/images/b02ac973-403b-4ead-99bf-17bc307172d9.png
