--- a/docs/introduction/installation.mdx
+++ b/docs/introduction/installation.mdx
@@ -7,7 +7,14 @@ description: Step-by-step guide for installing the Qbox framework on your FiveM 
 slug: /installation
 ---
 
+import ReactPlayer from 'react-player/lazy'
+
 # Installation
+
+### Visual learner? Watch this video instead!
+
+<ReactPlayer url='https://www.youtube.com/watch?v=76ePQdRKZzk' controls='true' volume='0.7' pip='true' stopOnUnmount='false' />
+ㅤ
 
 :::info
 We highly recommend using **txAdmin** to install your FiveM server.  
