fix: SetGangs arguments

--- a/docs/resources/qbx_core/exports/server.mdx
+++ b/docs/resources/qbx_core/exports/server.mdx
@@ -767,7 +767,7 @@ exports.qbx_core:RemovePlayerFromJob(citizenid, jobName)
 Overwrites current primary gang with a new job. Removing the player from their current primary gang.
 
 ```lua
-exports.qbx_core:SetGang(identifier, jobName, gangName)
+exports.qbx_core:SetGang(identifier, gangName, grade)
 ```
 
 - identifier: `source | citizenid`
