--- a/docs/introduction/installation.mdx
+++ b/docs/introduction/installation.mdx
@@ -13,17 +13,19 @@ import ReactPlayer from 'react-player/lazy'
 
 ### Visual learner? Watch this video instead!
 
-<ReactPlayer url='https://www.youtube.com/watch?v=76ePQdRKZzk' controls='true' volume='0.7' pip='true' stopOnUnmount='false' />
+<ReactPlayer
+ width='100%'
+url='https://www.youtube.com/watch?v=76ePQdRKZzk' controls='true' volume='0.7' pip='true' stopOnUnmount='false' />
 ㅤ
 
 :::info
-We highly recommend using **txAdmin** to install your FiveM server.  
-For detailed instructions, refer to [Setting up a server using txAdmin](https://docs.fivem.net/docs/server-manual/setting-up-a-server-txadmin/).
+* We highly recommend using **txAdmin** to install your FiveM server.
+* For detailed instructions, refer to [Setting up a server using txAdmin](https://docs.fivem.net/docs/server-manual/setting-up-a-server-txadmin/).
 :::
 
-:::danger
-We expect you to already have MariaDB installed. XAMPP IS NOT SUPPORTED AND SHOULD NEVER EVEN BE USED.
-Please download MariaDB from the official website: [MariaDB Downloads](https://mariadb.org/download/).
+:::danger[XAMPP IS NOT SUPPORTED AND SHOULD NEVER EVEN BE USED.]
+* We expect you to already have ``MariaDB`` installed.
+* Please download ``MariaDB`` from the official website: [MariaDB Downloads](https://mariadb.org/download/).
 :::
 
 ## Installation Steps
@@ -44,7 +46,7 @@ Open the folder you just extracted it to. It should look a little like this. And
 
 ![Server Folder](/img/artifact-list.png)
 
-### 4. Start the recipe installation 
+### 4. Start the recipe installation
 
 Run `FXServer.exe` to start txAdmin and follow all the steps.
 
