--- a/docs/resources/qbx_core/multichar.mdx
+++ b/docs/resources/qbx_core/multichar.mdx
@@ -10,5 +10,6 @@ description: Documentation for the multi-character system in qbx_core. Learn how
 
 Yes, you can. To disable the built in multicharacter change this setting to true in `qbx_core/config/client.lua`
 ```lua filename="qbx_core/config/client.lua"
-    useExternalCharacters = false, -- Whether you have an external character management resource. (If true, disables the character management inside the core)
+ -- Whether you have an external character management resource. (If true, disables the character management inside the core)
+useExternalCharacters = false,
 ```
