feat(qbx_core): isWearingDuffelBag Check.

--- a/docs/resources/qbx_core/modules/lib/client.mdx
+++ b/docs/resources/qbx_core/modules/lib/client.mdx
@@ -224,6 +224,16 @@ qbx.isWearingGloves()
 
 Returns: `boolean`
 
+## isWearingDuffelbag
+
+Returns if the local ped is wearing a duffel bag.
+
+```lua
+qbx.isWearingDuffelbag()
+```
+
+Returns: `boolean`
+
 ## loadAudioBank
 
 Attempts to load an audio bank and returns whether it was successful. \
