Date Fix + Add author

--- a/blog/2025/04-20-setup-manifests.mdx
+++ b/blog/2025/04-20-setup-manifests.mdx
@@ -1,4 +1,5 @@
-authors: Scorpion  
+---
+authors: scorpion  
 title: "How fxmanifests Work with FiveM"  
 keywords: [qbox, fivem, gta5, fxmanifest, resource, addon]  
 description: Learn what fxmanifests are, how they work, and how to use them in your FiveM resources.  
