Update author picture

--- a/blog/2025/04-20-setup-manifests.mdx
+++ b/blog/2025/04-20-setup-manifests.mdx
@@ -31,7 +31,7 @@ At a minimum, you need to define two things:
 - `adamant` – Legacy version  
 
 ### `game` options:
-- `gta5` – For FiveM (use this for QBCore/Qbox)  
+- `gta5` – For FiveM (use this for Qbox)  
 - `gta4` – For LibertyM (rarely used)  
 - `rdr3` – For RedM  
 - `common` – Works across games, but lacks access to game-specific natives (not recommended)  
