Fix resource name in vehiclekeys

--- a/docs/resources/qbx_vehiclekeys/commands.mdx
+++ b/docs/resources/qbx_vehiclekeys/commands.mdx
@@ -8,7 +8,7 @@ image: https://files.fivemerr.com/images/b02ac973-403b-4ead-99bf-17bc307172d9.pn
 
 # Slash Commands
 
-Below is a list of commands available from qbx_core.
+Below is a list of commands available from qbx_vehiclekeys.
 These commands are located at `qbx-vehiclekeys/server/commands.lua` for further inspection
 
 --- 
@@ -51,7 +51,7 @@ Parameters:
 - ` ID of player `
     - optional
     - Type: ` integer `
-    
+
 Example:
 ```lua
 /addkeys 23   -- give a key to player 23
