--- a/docs/introduction/installation.mdx
+++ b/docs/introduction/installation.mdx
@@ -50,15 +50,9 @@ Run `FXServer.exe` to start txAdmin and follow all the steps.
 
 ### 5. Deploy the recipe
 
-When prompted, select `Remote URL Template`:
+When prompted, select `Popular Recipes` and then `QBox Framework`:
 
 ![Deployment Type](/img/txadmin-deployment-type.jpg)
-
-Use the raw recipe link shown below:
-
-```bash
-https://raw.githubusercontent.com/Qbox-project/txAdminRecipe/main/qbox.yaml
-```
 
 ### 6. Run the server
 
