fix(tebex): Swap script descriptions
Descriptions were setup for the wrong scripts. This commit just swaps their places

--- a/docs/tebex/weapon-audio/index.mdx
+++ b/docs/tebex/weapon-audio/index.mdx
@@ -17,7 +17,13 @@ title: "🔫 Weapon Audio"
 </Columns>
 ㅤ
 
-Bring the fun of the casino straight to your FiveM server with our Casino Slots script! Now your players can spin the reels and try their luck with fully working slot machines that feel just like the real deal. It’s super easy to set up and works smoothly for everyone on the server. With cool animations and sounds, it adds a fresh way for players to hang out and win big. Perfect for RP servers looking to spice things up and keep players coming back for more. Ready to make your server the place to be? Add Casino Slots today and let the good times roll!
+Bring your FiveM server to life with immersive, custom weapon audio! This FiveM
+script streams unique, high-quality weapon sounds server-sided, creating an
+enhanced audio experience for your players. With realistic, powerful sound
+effects for every shot. Easy to install, this script ensures all players hear
+the same, thrilling sounds without needing individual downloads. Perfect for any
+RP server looking to elevate gameplay realism and engagement. Make every
+firefight unforgettable. Add custom weapon audio to your FiveM server today!
 
 
 
