chore: Update overextended Links

--- a/blog/2025/4-19-vscode-intellisense.mdx
+++ b/blog/2025/4-19-vscode-intellisense.mdx
@@ -37,7 +37,7 @@ Make sure you have [Visual Studio Code](https://code.visualstudio.com/) installe
 - [GitLens](https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens)
 - [Lua Language Server](https://marketplace.visualstudio.com/items?itemName=sumneko.lua)
 - [EditorConfig](https://marketplace.visualstudio.com/items?itemName=EditorConfig.EditorConfig)
-- [CfxLua IntelliSense](https://marketplace.visualstudio.com/items?itemName=ihyajb.cfxlua-intellisense)
+- [CfxLua IntelliSense](https://marketplace.visualstudio.com/items?itemName=communityox.cfxlua-vscode-cox)
 
 ---
 
