--- a/docs/introduction/converting.mdx
+++ b/docs/introduction/converting.mdx
@@ -10,7 +10,7 @@ slug: /converting
 # Converting from QBCore
 
 :::info
-We highly recommend installing Qbox via the recipe to avoid as many issues as possible.  
+We highly recommend installing Qbox via the recipe to avoid as many issues as possible.
 For detailed instructions, refer to [Installation](installation).
 :::
 
@@ -27,7 +27,7 @@ In Qbox, job grades are numbers without quotations, whereas in QBCore they are s
 
 ### 3. Configure ox_inventory and convert your database
 
-Back it up first! ([see ox_inventory documentation](https://overextended.dev/ox_inventory/Frameworks/qb))
+Back it up first! ([see ox_inventory documentation](https://coxdocs.dev/ox_inventory/Frameworks/qb))
 
 ### 4. Update qbx_core's job and gang shared files
 
