--- a/docs/introduction/faq.mdx
+++ b/docs/introduction/faq.mdx
@@ -11,7 +11,7 @@ slug: /faq
 
 ## What are the differences between QBCore and Qbox?
 
-While originally forked from QBCore, many Qbox resources have been refactored to improve code quality, enhance security, lower performance overhead, and integrate with [overextended](https://overextended.dev) resources.
+While originally forked from QBCore, many Qbox resources have been refactored to improve code quality, enhance security, lower performance overhead, and integrate with [overextended](https://coxdocs.dev) resources.
 Where appropriate Qbox also integrates directly with other open source projects, rather than maintaining subpar resources in-house.
 
 Qbox maintains high quality standards, with a strong community of regular contributors.
@@ -90,7 +90,7 @@ Changing keybinds via convars or configuration files will not change them for cl
 
 ### txAdmin Installation: Task Failed: Response code 403 (rate limit exceeded)
 
-This is due to Github rate limits which is outside our control. You can keep trying or change your IP address 
+This is due to Github rate limits which is outside our control. You can keep trying or change your IP address
 
 ### SCRIPT ERROR: failed to load model
 
