--- a/docs/resources/qbx_core/exports/client.mdx
+++ b/docs/resources/qbx_core/exports/client.mdx
@@ -40,7 +40,7 @@ exports.qbx_core:Notify(text, notifyType, duration, subTitle, notifyPosition, no
 - notifyIconColor?: `string`
   - Custom color for `notifyIcon`.
 
-[`lib.notify`]: https://overextended.dev/ox_lib/Modules/Interface/Client/notify#libnotify
+[`lib.notify`]: https://coxdocs.dev/ox_lib/Modules/Interface/Client/notify#libnotify
 
 ## HasPrimaryGroup
 
