--- a/docs/resources/qbx_core/exports/server.mdx
+++ b/docs/resources/qbx_core/exports/server.mdx
@@ -540,7 +540,7 @@ exports.qbx_core:Notify(source, text, notifyType, duration, subTitle, notifyPosi
 - notifyIconColor?: `string`
   - Custom color for `notifyIcon`.
 
-[`lib.notify`]: https://overextended.dev/ox_lib/Modules/Interface/Client/notify#libnotify
+[`lib.notify`]: https://coxdocs.dev/ox_lib/Modules/Interface/Client/notify#libnotify
 
 ## Login
 
