--- a/docs/resources/qbx_core/modules/lib/index.mdx
+++ b/docs/resources/qbx_core/modules/lib/index.mdx
@@ -12,7 +12,7 @@ Provides the `qbx` global table with various utility functions.
 ## Prerequisites
 
 - Lua 5.4 - add `lua54 'yes'` to your fxmanifest.
-- [ox_lib](https://overextended.dev/ox_lib) - add `@ox_lib/init.lua` to `shared_scripts` in your fxmanifest.
+- [ox_lib](https://coxdocs.dev/ox_lib) - add `@ox_lib/init.lua` to `shared_scripts` in your fxmanifest.
 
 ## Installation
 
