--- a/docs/resources/qbx_core/modules/lib/shared.mdx
+++ b/docs/resources/qbx_core/modules/lib/shared.mdx
@@ -127,7 +127,7 @@ Generates and returns a random number plate with the given pattern. \
 Note that the generated plate may or may not be already used by an existing vehicle.
 
 :::info
-  For more info about the pattern see [`lib.string.random`](https://overextended.dev/ox_lib/Modules/String/Shared#stringrandom) from ox_lib.
+  For more info about the pattern see [`lib.string.random`](https://coxdocs.dev/ox_lib/Modules/String/Shared#stringrandom) from ox_lib.
 :::
 
 ```lua
