--- a/docs/resources/qbx_core/modules/logger.mdx
+++ b/docs/resources/qbx_core/modules/logger.mdx
@@ -8,7 +8,7 @@ description: Documentation for the logger module in the qbx_core resource. This 
 # logger
 
 :::info
-  See the ox_lib [Logger](https://overextended.dev/ox_lib/Modules/Logger/Server) for further details.
+  See the ox_lib [Logger](https://coxdocs.dev/ox_lib/Modules/Logger/Server) for further details.
 :::
 
 Adds a logger that logs to Discord if a webhook is given, and with ox_lib otherwise.
