--- a/docs/introduction/introduction.mdx
+++ b/docs/introduction/introduction.mdx
@@ -12,7 +12,7 @@ slug: /
 Qbox is a FiveM roleplay framework created on September 27, 2022.
 
 Starting as a QBCore fork, its goal was improving upon QBCore while maintaining backwards compatibility. \
-Today this framework strives to be much greater, and utilizes [overextended's resources](https://github.com/overextended) to achieve its goals.
+Today this framework strives to be much greater, and utilizes [overextended's resources](https://github.com/CommunityOx) to achieve its goals.
 
 :::note[Read here]
 We are however not affiliated with the Overextended team. They are their own entity and we simply utilize their resources.
