--- a/docs/resources/qbx_core/modules/lib/server.mdx
+++ b/docs/resources/qbx_core/modules/lib/server.mdx
@@ -24,7 +24,7 @@ qbx.spawnVehicle(params)
     - An optional ped ID to warp into the vehicle after it spawns.
     - If `spawnSource` is a ped ID, you can pass `true` to warp the ped specified there instead.
   - props?: `table`
-    - Refer to ox_lib's [Vehicle Properties](https://overextended.dev/ox_lib/Modules/VehicleProperties/Client#vehicle-properties).
+    - Refer to ox_lib's [Vehicle Properties](https://coxdocs.dev/ox_lib/Modules/VehicleProperties/Client#vehicle-properties).
   - bucket? `integer`
     - An optional routing bucket to move the spawned entity to.
 
