fix(installation): new install video
I see you izzy

--- a/docs/introduction/installation.mdx
+++ b/docs/introduction/installation.mdx
@@ -13,7 +13,7 @@ slug: /installation
 
 <ReactPlayer
  width='100%'
-url='https://www.youtube.com/watch?v=76ePQdRKZzk' controls='true' volume='0.7' pip='true' stopOnUnmount='false' />
+url='https://www.youtube.com/watch?v=FQGsXn0bRcI' controls='true' volume='0.7' pip='true' stopOnUnmount='false' />
 ㅤ
 
 :::info
